included percentage for 'n' values in checklist analysis

--- a/core/templates/core/checklist_analysis.html
+++ b/core/templates/core/checklist_analysis.html
@@ -52,10 +52,10 @@
 	            <td><strong>N </strong>506</td>
 	        </tr>
 	        <tr>
-	            <td><strong>n </strong>250</td>
-	            <td><strong>n </strong>390</td>
-	            <td><strong>n </strong>456</td>
-	            <td><strong>n </strong>102</td>
+	            <td><strong>n </strong>250 (49.4%)</td>
+	            <td><strong>n </strong>390 (77.1%)</td>
+	            <td><strong>n </strong>456 (90.1%)</td>
+	            <td><strong>n </strong>102 (20.2%)</td>
 	        </tr>
 	        <tr>
 	            <td>
@@ -238,10 +238,10 @@
 		            <td><strong>N </strong>506</td>
 		        </tr>
 		        <tr>
-		            <td><strong>n </strong>450</td>
-		            <td><strong>n </strong>380</td>
-		            <td><strong>n </strong>478</td>
-		            <td><strong>n </strong>299</td>
+		            <td><strong>n </strong>450 (88.9%)</td>
+		            <td><strong>n </strong>380 (75.1%)</td>
+		            <td><strong>n </strong>478 (94.5%)</td>
+		            <td><strong>n </strong>299 (59.1%)</td>
 		        </tr>
 		        <tr>
 		        	<td>
