--- a/core/static/css/custom.css
+++ b/core/static/css/custom.css
@@ -1,7 +1,6 @@
-.h_style{
-	border-top: 1px dashed #D3DAD9; border-bottom: 1px dashed #D3DAD9; font-weight: normal; font-style:italic; padding-top:.5em; padding-bottom:.5em; padding-left:1em;
-}
-.con_style{padding-top:1.2em; padding-bottom:1em;}
-.options {
-    display: block; margin-top: 0.5em;
-}
+.h_style { border-top: 1px dashed #D3DAD9; border-bottom: 1px dashed #D3DAD9; font-weight: normal; font-style:italic; padding-top:.5em; padding-bottom:.5em; padding-left:1em; }
+.con_style { padding-top:1.2em; padding-bottom:1em; }
+.options { display: block; margin-top: 0.5em; }
+.submission-table .submission-field ul { list-style-type: none; margin: 0; }
+.submission-table .centered { text-align: center; }
+.submission-table .submission-field ul input[type="radio"], input[type="checkbox"] { margin: -2px 0 0 0;}
