--- a/core/templates/core/submission_filter.html
+++ b/core/templates/core/submission_filter.html
@@ -3,12 +3,12 @@
   <form action="" method="post" id="filter">
     {% csrf_token %}
     <div class="controls controls-row">
-      <input class="span2" type="text" name="observer__observer_id" value="{{ filter_form.observer__observer_id.value|default_if_none:"" }}" placeholder="Observer ID">
+      {{ filter_form.observer__observer_id }}
       <div class="input-append date span2 datesel" data-date="" data-date-format="yyyy-mm-dd">
         <input class="span2" name="date" placeholder="Date" style="width:129px" size="16" type="text" value="{{ filter_form.date.value|default_if_none:"" }}" readonly="readonly">
         <span class="add-on"><i class="icon-calendar"></i></span>
       </div>
-      <input class="span4" type="text" value="{{ filter_form.location.value|default_if_none:"" }}" name="location" class="input-xlarge" placeholder="Location">
+      {{ filter_form.location }}
       {% if form.type != 'CHECKLIST' %}<button type="submit" style="margin-left:1em" class="btn btn-warning"><i class="icon-search icon-white"></i> Search</button> <a class="btn form-reset" style="margin-left:0.5em">Clear</a>{% endif %}
     </div>
     {% if form.type == 'CHECKLIST' %}
