--- a/core/templates/core/layout.html
+++ b/core/templates/core/layout.html
@@ -9,13 +9,17 @@
     <!-- Le styles -->
     <link href="{{ STATIC_URL }}css/bootstrap.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}css/select2.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}css/custom.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}css/datepicker.css" rel="stylesheet">
+    {% block stylesheets %}{% endblock %}
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-1.8.1.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/select2.min.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap-datepicker.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/custom.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/protovis.min.js"></script>
+    {% block javascripts %}{% endblock %}
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -28,6 +32,7 @@
 
     <!-- Le fav and touch icons -->
     <link rel="shortcut icon" href="{{ STATIC_URL }}ico/favicon.ico">
+    {% block head %}{% endblock %}
   </head>
   <body>
     <div class="navbar navbar-static-top">
@@ -49,7 +54,7 @@
     <div class="container">
       {% block content %}{% endblock %}
       <div class="footer">
-        <footer></footer>
+        <footer>{% block footer %}{% endblock %}</footer>
       </div>
     </div>
   </body>
