--- a/zimbabwe/templates/core/layout.html
+++ b/zimbabwe/templates/core/layout.html
@@ -49,7 +49,7 @@
         </div>
       </div>
     <div class="container con_style">
-      <h3 class="h_style">{{ page_title }}</h3>
+      <h3 class="h_style">{% block title %}{{ page_title }}{% endblock %}</h3>
     </div>
     <div class="container">
       {% block content %}{% endblock %}
