renamed Message Log to just Messages

--- a/core/templates/core/layout.html
+++ b/core/templates/core/layout.html
@@ -43,7 +43,7 @@
               <li><a href="{% url dashboard %}"><i class="icon-home"></i> Dashboard</a></li>
               {% forms_menu %}
               <li><a href="{% url contacts_list%}"><i class="icon-user"></i> Contacts</a></li>
-              <li><a href="#"><i class="icon-envelope"></i> Message Log</a></li>
+              <li><a href="#"><i class="icon-envelope"></i> Messages</a></li>
               <a href="{% url user-logout %}" class="pull-left btn btn-default">Logout</a>
             </ul>
           </div>
