a couple of usability enhancements

--- a/src/apollo/core/templates/core/contact_edit.html
+++ b/src/apollo/core/templates/core/contact_edit.html
@@ -13,9 +13,12 @@
             <td>{{ field }}</td>
           </tr>
         {% endfor %}
+          <tr>
+            <td>&nbsp;</td>
+            <td><input type="submit" class="btn btn-primary" value="Save"> <a class="btn" style="margin-left:0.5em" href="javascript:history.go(-1);">Cancel</a></td>
+          </tr>
         </tbody>
       </table>
-      <input type="submit" value="Save">
     </div>
   </div>
 </form>
