--- a/src/apollo/core/templates/core/forms_menu.html
+++ b/src/apollo/core/templates/core/forms_menu.html
@@ -1,8 +1,18 @@
-{% for form in forms %}
-<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-check"></i> {{ form.name }} <b class="caret"></b></a>
+{% if checklist_forms %}
+<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-check"></i> Checklists<b class="caret"></b></a>
     <ul class="dropdown-menu">
-        <li><a href="{% url submissions_list form.pk %}"><i class="icon-list"></i> {% if form.type == 'CHECKLIST' %}Checklist{% else %}Incident{% endif %} Forms</a></li>
-        <li><a href="{% url submissions_analysis form.pk %}"><i class="icon-tasks"></i> {% if form.type == 'CHECKLIST' %}Checklists{% else %}Incidents{% endif %} Analysis</a></li>
+        {% for form in checklist_forms %}
+        <li><a href="{% url submissions_list form.pk %}"><i class="icon-check"></i> {{ form.name }}</a></li>
+        {% endfor %}
     </ul>
 </li>
-{% endfor %}
+{% endif %}
+{% if incident_forms %}
+<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-check"></i> Critical Incidents<b class="caret"></b></a>
+    <ul class="dropdown-menu">
+        {% for form in incident_forms %}
+        <li><a href="{% url submissions_list form.pk %}"><i class="icon-check"></i> {{ form.name }}</a></li>
+        {% endfor %}
+    </ul>
+</li>
+{% endif %}
