--- a/src/apollo/core/templates/core/submission_items.html
+++ b/src/apollo/core/templates/core/submission_items.html
@@ -22,9 +22,10 @@
     <td style="text-align:center">{% if submission.data|keyvalue:field.tag %}<img src="{% static "img/red_dot.png" %}" title="missing" alt="missing" />{% else %}&nbsp;{% endif %}</td>
     {% endfor %}
     {% endif %}
-    <td style="text-align:center"><a href="{% url submission_edit submission.pk %}">Edit</a></td>
+    {% if perms.core.change_submission %}<td style="text-align:center"><a href="{% url submission_edit submission.pk %}">Edit</a></td>{% endif %}
 </tr>
 {% empty %}
+{% if perms.core.change_submission %}
 {% if form.type == 'CHECKLIST' %}
 {% with location_types|length|add:"5" as lt_count %}
 {% with form_groups|length|add:lt_count as colspan %}
@@ -41,5 +42,24 @@
 </tr>
 {% endwith %}
 {% endwith %}
+{% endif %}
+{% else %}
+{% if form.type == 'CHECKLIST' %}
+{% with location_types|length|add:"4" as lt_count %}
+{% with form_groups|length|add:lt_count as colspan %}
+<tr class="warning">
+    <td style="text-align:center" colspan="{{ colspan }}">No Data Available</td>
+</tr>
+{% endwith %}
+{% endwith %}
+{% else %}
+{% with location_types|length|add:"4" as lt_count %}
+{% with form_fields|length|add:lt_count as colspan %}
+<tr class="warning">
+    <td style="text-align:center" colspan="{{ colspan }}">No Data Available</td>
+</tr>
+{% endwith %}
+{% endwith %}
+{% endif %}
 {% endif %}
 {% endfor %}
