--- a/src/apollo/core/templates/core/analysis_menu.html
+++ b/src/apollo/core/templates/core/analysis_menu.html
@@ -1,3 +1,4 @@
+{% if perms.core.can_analyse %}
 {% if forms %}
 <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-tasks"></i> Analysis <b class="caret"></b></a>
     <ul class="dropdown-menu">
@@ -6,4 +7,5 @@
         {% endfor %}
     </ul>
 </li>
+{% endif %}
 {% endif %}
