--- a/src/apollo/zimbabwe/templates/core/layout.html
+++ b/src/apollo/zimbabwe/templates/core/layout.html
@@ -42,10 +42,10 @@
             <ul class="nav pull-right">
               <li><a href="{% url dashboard %}"><i class="icon-home"></i> Dashboard</a></li>
               {% forms_menu %}
-              <li><a href=""><i class=""></i> Verification</a></li>
+              {% if perms.core.can_verify %}<li><a href=""><i class=""></i> Verification</a></li>{% endif %}
               {% analysis_menu %}
-              <li><a href="{% url contacts_list %}"><i class="icon-user"></i> Observers</a></li>
-              <li><a href="{% url messages_list %}"><i class="icon-envelope"></i> Messages</a></li>
+              {% if perms.core.view_observers %}<li><a href="{% url contacts_list %}"><i class="icon-user"></i> Observers</a></li>{% endif %}
+              {% if perms.messagelog.view_messages %}<li><a href="{% url messages_list %}"><i class="icon-envelope"></i> Messages</a></li>{% endif %}
               <a href="{% url user-logout %}" class="pull-left btn btn-default">Logout</a>
             </ul>
           </div>
