--- a/src/apollo/core/templates/core/layout.html
+++ b/src/apollo/core/templates/core/layout.html
@@ -43,7 +43,7 @@
               <li><a href="{% url dashboard %}"><i class="icon-home"></i> Dashboard</a></li>
               {% forms_menu %}
               {% if perms.core.can_verify %}<li><a href=""><i class=""></i> Verification</a></li>{% endif %}
-              {% analysis_menu %}
+              {% if perms.core.can_analyse %}{% analysis_menu %}{% endif %}
               {% if perms.core.view_observers %}<li><a href="{% url contacts_list %}"><i class="icon-user"></i> Observers</a></li>{% endif %}
               {% if perms.messagelog.view_messages %}<li><a href="{% url messages_list %}"><i class="icon-envelope"></i> Messages</a></li>{% endif %}
               <a href="{% url user-logout %}" class="pull-left btn btn-default">Logout</a>
