--- a/src/apollo/core/templates/core/checklist_summary.html
+++ b/src/apollo/core/templates/core/checklist_summary.html
@@ -7,13 +7,11 @@
       {% analysis_location_navigation form location %}
   </div>
   <div class="span4">
-    <form class="form-horizontal pull-right" action="" method="" accept-charset="utf-8">  
-        <select class="">
-          <option disabled selected style='display:none;'>Sample</option>
-          <option>All</option>
-        </select class="">                 
-        <button class="btn btn-danger" type="submit">Filter</button>
-      </select>
+      <form class="form-horizontal pull-right" action="" method="post" accept-charset="utf-8">
+          {% csrf_token %}
+          <input type="hidden" name="location" id="id_location" value="{{ location.pk }}" />
+          {{ filter_form.sample }}
+          <button class="btn btn-warning" style="margin-left:1em" type="submit"><i class="icon-search icon-white"></i> Filter</button>
     </form>
   </div>
 </div>
