1. major refactoring of datagenerator to mainly use    querysets for data extraction and optimized for    database querying, consequently, the analysis view    also had to be refactored. 2. refactored the sub_location_types method to be    invoked from the Location model. 3. removed the default ordering for Locations speeding    up some queries involving locations by a factor of 3x

--- a/src/apollo/core/templates/core/checklist_summary.html
+++ b/src/apollo/core/templates/core/checklist_summary.html
@@ -17,7 +17,7 @@
 <div class="row">
 	<div class="span12">
 	{% if process_summary %}
-	{% if process_summary.type == 'sample' %}
+	{% if process_summary.type == 'normal' %}
 		{% for group, group_stats in process_summary.summary %}
 		<h5>{{ group }}</h5>
 
