--- a/src/apollo/core/templates/core/checklist_summary.html
+++ b/src/apollo/core/templates/core/checklist_summary.html
@@ -25,7 +25,7 @@
 		<table width="100%" class="table table-striped table-bordered">
 			<tr>
 				<td width="30" rowspan="2"><b>{{ tag }}</b></td>
-                <td rowspan="2"><a href="{% url submissions_analysis_location_tag form.pk location.pk tag %}">{{ question }}</a></td>
+                <td rowspan="2"><a href="javascript:;">{{ question }}</a></td>
 				{% if tag_stats.type == 'numeric' %}
 				<td bgcolor="#eee">Mean</td>
 				{% else %}
